--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "tk",
-  "displayName": "tab-keeper",
-  "description": "keeps vscode tabs for branches",
+  "displayName": "Tab-Keeper",
+  "description": "Keeps your tabs organized by branch in VSCode.",
+  "publisher": "chunter17",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.101.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Hunter102/Tab-Keeper"
   },
   "categories": [
     "Other"
